--- a/pipelines/qc/Snakefile
+++ b/pipelines/qc/Snakefile
@@ -50,6 +50,8 @@ rule generate_report:
 rule write_config:
   output:
     cfg="{sampleset}/qc_config.yml"
+  params:
+    req="h_vmem=2G"
   run:
     import yaml
     with open(output.cfg, "w") as fh:
@@ -95,6 +97,8 @@ rule coverage_summary:
 rule make_manifest:
    output:
      manifest="{sampleset}/manifest"
+  params:
+    req="h_vmem=2G"
    run:
      with open(output.manifest, "w") as fh:
        print("\n".join(samples), file=fh)
